cambios agregados --bucles para iterar y agregar los elemetos a nuestra mastris falta crear una funcion para que la mastris se vaya mostrando por pantalla

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
     <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/fraction.js/fraction.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fraction.js@4/dist/fraction.min.js"></script>
 </head>
 <body>
     <div class="container ">
@@ -33,7 +33,7 @@
     <button id="solve">click aca</button>
 
     <div class="aca">
-
+        
     </div>
 
     <script src="codigo.js"></script>
